--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@slack/web-api": "^6.9.1",
     "openai": "^4.17.3"
   },
   "main": "src/functions/*.js"
