--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@azure/openai": "^1.0.0-beta.7",
     "@slack/web-api": "^6.9.1",
     "openai": "^4.17.3"
   },
