--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
-    "@azure/openai": "^1.0.0-beta.7",
-    "@slack/web-api": "^6.9.1",
-    "azure-openai": "^0.9.4",
-    "openai": "^4.17.3"
+    "superagent": "^8.1.2"
   },
-  "main": "src/functions/*.js"
+  "main": "src/functions/*.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SatoshiInoue-DIS/a3b_chatbot_slack.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SatoshiInoue-DIS/a3b_chatbot_slack/issues"
+  },
+  "homepage": "https://github.com/SatoshiInoue-DIS/a3b_chatbot_slack#readme"
 }
