--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@slack/web-api": "^6.10.0",
+    "azure-openai": "^0.9.4",
+    "openai": "^4.19.0",
     "superagent": "^8.1.2"
   },
   "main": "src/functions/*.js",
